src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Account External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <formula>IMAGE(

"https://maps.googleapis.com/maps/api/staticmap?center=" + BillingStreet + "," + BillingCity + "," + BillingState +" &amp;zoom=13&amp;size=650x250&amp;markers=color:red|" + BillingStreet + "," + BillingCity + "," + BillingState + "&amp;sensor=true"





, "no map available", 250, 650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Certifications__c</fullName>
        <label>Active Certifications</label>
        <summaryFilterItems>
            <field>Trade_Ally_Certification__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Trade_Ally_Certification__c.Trade_Ally__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_Insurances__c</fullName>
        <label>Active Insurances</label>
        <summaryFilterItems>
            <field>Trade_Ally_Insurance__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Trade_Ally_Insurance__c.Trade_Ally__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_Licenses__c</fullName>
        <label>Active Licenses</label>
        <summaryFilterItems>
            <field>Trade_Ally_License__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Trade_Ally_License__c.Trade_Ally__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_Specialties__c</fullName>
        <label>Active Specialties</label>
        <summaryForeignKey>Trade_Ally_Specialty__c.Trade_Ally__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active_Territory_Assignments__c</fullName>
        <label>Active Territory Assignments</label>
        <summaryForeignKey>Territory_Assignment__c.Trade_Ally__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>Today() +0</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address_2__c</fullName>
        <label>Billing Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Latitude__c</fullName>
        <formula>BillingLatitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Longitude__c</fullName>
        <formula>BillingLongitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Structure__c</fullName>
        <label>Business Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>C Corporation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Incorporation</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>S Corporation</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Design-Build Firm</fullName>
                </value>
                <value>
                    <fullName>Distribution / Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Energy Managment / DR</fullName>
                </value>
                <value>
                    <fullName>Engineering Services</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Relationship__c</fullName>
        <label>Buying Relationship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Outside</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Account_Count__c</fullName>
        <label>Child Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consumer_Facing_Lang_Spoke__c</fullName>
        <label>Consumer Facing Lang Spoke</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Incorporated__c</fullName>
        <label>Date Incorporated / Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Last_Referral__c</fullName>
        <label>Date Of Last Referral</label>
        <summarizedField>Trade_Ally_Referral__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>Trade_Ally_Referral__c.Trade_Ally__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Company Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enable_External_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked, TA account will be synced back to DSMC.</description>
        <label>Enable external integration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Federal_Tax_Id_Number__c</fullName>
        <label>Federal Tax Id Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Company_Name__c</fullName>
        <label>Legal Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Active_Users__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Active Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Referrals__c</fullName>
        <label>Number Of Referrals</label>
        <summaryForeignKey>Trade_Ally_Referral__c.Trade_Ally__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Sales_Employees__c</fullName>
        <label>Number Of Sales Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Business_Structure__c</fullName>
        <label>If other, Please describe</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Country_Code__c</fullName>
        <label>Phone Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>President_Owner_of_Company__c</fullName>
        <label>Principal/President/Owner of Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Type__c</fullName>
        <description>The application type that is being selected while signing up.</description>
        <inlineHelpText>The application type that is being selected while signing up.</inlineHelpText>
        <label>Application Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projects_Completed__c</fullName>
        <label>Projects Completed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Registration Сode</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Residential_Programs__c</fullName>
        <label>Residential Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TEST VALUE 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contractor can be searched in Find Trade Ally.</description>
        <label>Search Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sectors__c</fullName>
        <label>Sectors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TEST VALUE 1</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Incorporated__c</fullName>
        <label>State Incorporated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_Level__c</fullName>
        <label>Tier Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Special</fullName>
                    <label>Premium</label>
                </value>
                <value>
                    <fullName>Common</fullName>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Limit__c</fullName>
        <label>User Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Insurance_Expiration_Date__c</fullName>
        <label>Auto Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Insurance_Expired__c</fullName>
        <formula>Auto_Insurance_Expiration_Date__c &lt; TODAY()</formula>
        <label>Auto Insurance Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blank_Referrals__c</fullName>
        <label>Blank Referrals</label>
        <summaryFilterItems>
            <field>Trade_Ally_Referral__c.Referral_Status__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Trade_Ally_Referral__c.Trade_Ally__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_License_Expiration_Date__c</fullName>
        <label>Business License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_License_Expired__c</fullName>
        <formula>Business_License_Expiration_Date__c &lt; TODAY()</formula>
        <label>Business License Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractor_License_Expiration_Date__c</fullName>
        <label>Contractor License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contractor_License_Expired__c</fullName>
        <formula>Contractor_License_Expiration_Date__c &lt; TODAY()</formula>
        <label>Contractor License Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liability_Insurance_Expiration_Date__c</fullName>
        <label>Liability Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liability_Insurance_Expired__c</fullName>
        <formula>Liability_Insurance_Expiration_Date__c &lt; TODAY()</formula>
        <label>Liability Insurance Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Eligibility_Status__c</fullName>
        <label>Referral Eligibility Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REP Suspended Referrals</fullName>
                </value>
                <value>
                    <fullName>No Eligible Programs</fullName>
                </value>
                <value>
                    <fullName>Auto Insurance Expired</fullName>
                </value>
                <value>
                    <fullName>Unresolved Unreported Business</fullName>
                </value>
                <value>
                    <fullName>Unresolved Complaints</fullName>
                </value>
                <value>
                    <fullName>Unresolved Verifications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspend_Referrals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspend Referrals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Throttle_Limit__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Throttle Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participating_Programs__c</fullName>
        <label>Participating Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prescriptive</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Active_Trade_Allies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Trade Allies</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>Registration_Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.RATING</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Trade_Allies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Inactive Trade Allies</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>External_Id__c</columns>
        <columns>Registration_Code__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <listViews>
        <fullName>Tier_1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier_Level__c</field>
            <operation>equals</operation>
            <value>Tier 1</value>
        </filters>
        <label>Tier 1</label>
    </listViews>
    <listViews>
        <fullName>Tier_2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier_Level__c</field>
            <operation>equals</operation>
            <value>Tier 2</value>
        </filters>
        <label>Tier 2</label>
    </listViews>
    <recordTypes>
        <fullName>Trade_Ally</fullName>
        <active>true</active>
        <label>Trade Ally</label>
    </recordTypes>
    <recordTypes>
        <fullName>Utility_Corporate_Entity</fullName>
        <active>true</active>
        <label>Utility Corporate Entity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Utility_Customer_Site</fullName>
        <active>true</active>
        <label>Utility Customer Site</label>
    </recordTypes>
    <validationRules>
        <fullName>Correct_User_Limit_Value</fullName>
        <active>true</active>
        <errorConditionFormula>User_Limit__c &lt; 0</errorConditionFormula>
        <errorDisplayField>User_Limit__c</errorDisplayField>
        <errorMessage>The value of the User Limit field can only be greater than or equal to zero</errorMessage>
    </validationRules>
</CustomObject>